e2e/keycloak/authz-config.json
{
  "listen_address": "0.0.0.0",
  "listen_port": 10003,
  "log_level": "debug",
  "chains": [
    {
      "name": "keycloak",
      "filters": [
        {
          "oidc": {
            "configuration_uri": "https://host.docker.internal:9443/realms/master/.well-known/openid-configuration",
            "proxy_uri": "http://idp-proxy:9000",
            "callback_uri": "https://host.docker.internal:8443/callback",
            "client_id": "authservice",
            "client_secret": "authservice-secret",
            "cookie_name_prefix": "authservice",
            "id_token": {
              "preamble": "Bearer",
              "header": "authorization"
            },
            "logout": {
              "path": "/logout",
              "redirect_uri": "https://host.docker.internal:9443/realms/master/protocol/openid-connect/logout"
            },
            "redis_session_store_config": {
              "server_uri": "redis://redis:6379"
            },
            "trusted_certificate_authority_file": "/etc/authservice/certs/ca.crt"
          }
        }
      ]
    }
  ]
}
